--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <title>A Drum Machine</title>
+    <title>Drum Machine</title>
     
     <script>
       function play(str) {
@@ -60,7 +60,7 @@
 
   <body>
     <div class="container" id="drum-machine">
-      <h1 class="text-center">A Drum Machine</h1>
+      <h1 class="text-center">Drum Machine</h1>
       <div class="card my-3">
         <div class="card-body">
           <div class="text-center" id="display">Click a button to play!</div>
